assignment 3.3 change
